--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Iron Cloud Redirect</title>
+<title>Iron Cloud | Redirect</title>
 <meta name="description" content="Iron Cloud Limited">
 <meta name="keywords" content="Iron Cloud Limited, Iron Cloud">
 <meta name="robots" content="all">
@@ -49,6 +49,7 @@ h3 {
 </div>
 <h1>Iron Cloud</h1>
 <h2>You will now be redirected...</h2>
-<h3><a href="https://ironcloud.statuspage.io">Check Network Status</a></h3>
+<h3><a href="https://ironcloud.statuspage.io">Network Status Checker</a></h3>
+<h3><a href="mailto:support@ironcloud.network?subject=Network%20Support">support@ironcloud.network</a></h3>
 </body>
 </html>
