--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h3 {
     <img src="Iron-Cloud.png" alt="Iron Cloud">
 </div>
 <h1>Iron Cloud</h1>
-<h2>You will now be redirected...</h2>
+<h2>Coming Soon...</h2>
 <h3><a href="https://ironcloud.statuspage.io">Network Status Checker</a></h3>
 <h3><a href="mailto:support@ironcloud.network?subject=Network%20Support">support@ironcloud.network</a></h3>
 </body>
